--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,6 +1,10 @@
+/* stylelint-disable */
+
 :global {
   @import '~bootstrap/scss/bootstrap-reboot';
   @import '~bootstrap/scss/bootstrap-grid';
   @import '~bootstrap/scss/mixins';
   @import '~bootstrap/scss/utilities/text';
+  @import '~bootstrap/scss/forms';
 }
+/* stylelint-enable */
