--- a/src/pages/HomePage/FilmsPage/FilmsItem/styles.scss
+++ b/src/pages/HomePage/FilmsPage/FilmsItem/styles.scss
@@ -1,6 +1,8 @@
 @import '~assets/styles/variables';
 
 .root {
+  position: relative;
+
   .image-wrap {
     text-align: center;
 
@@ -21,7 +23,7 @@
     height: 95%;
     transition: opacity 0.5s linear;
 
-    a {
+    & > a {
       position: relative;
       display: block;
       height: 100%;
@@ -40,5 +42,11 @@
       text-decoration: none;
       margin: 0;
     }
+  }
+
+  .icon-edit {
+    position: absolute;
+    top: 5px;
+    right: 5px;
   }
 }
